Fixed header on small screen

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,3 +1,5 @@
+@import "_variables";
+
 .card {
   width: 200px;
   height: 403px;
@@ -6,92 +8,93 @@
   background-color: $back-color;
   padding: 31px 15px 15px;
   margin: 0 24px 50px;
-}
 
-.card__image {
-  width: 160px;
-  height: 134px;
-  margin: 0 5px;
-  padding-bottom: 41px;
-}
+  .card__image {
+    width: 160px;
+    height: 134px;
+    margin: 0 5px;
+    padding-bottom: 41px;
+  }
 
-.card__description {
-  margin: 0;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 15px;
-  padding-bottom: 5px;
-}
+  .card__description {
+    margin: 0;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    padding-bottom: 5px;
+  }
 
-.card__code {
-  margin: 0;
-  font-size: 11px;
-  line-height: 13px;
-  padding-bottom: 15px;
-}
+  .card__code {
+    margin: 0;
+    font-size: 11px;
+    line-height: 13px;
+    padding-bottom: 15px;
+  }
 
-.card__stars {
-  position: absolute;
-  display: flex;
-  padding-right: 1px;
-}
+  .card__stars {
+    position: absolute;
+    display: flex;
+    padding-right: 1px;
+  }
 
-.card__star {
-  width: 15px;
-  height: 15px;
-  background: url(../images/star-active.svg) center no-repeat;
-  padding-right: 4px;
-}
+  .card__star {
+    width: 15px;
+    height: 15px;
+    background: url(../images/star-active.svg) center no-repeat;
+    padding-right: 4px;
+  }
 
-.card__stars .card__star:last-child {
-  background: url(../images/star.svg) center no-repeat;
-}
+  .card__stars .card__star:last-child {
+    background: url(../images/star.svg) center no-repeat;
+  }
 
-.card__feedback {
-  margin: 0;
-  position: absolute;
-  font-size: 11px;
-  line-height: 13px;
-  text-align: right;
-  padding: 1px 0 0 112px;
-}
+  .card__feedback {
+    margin: 0;
+    position: absolute;
+    font-size: 11px;
+    line-height: 13px;
+    text-align: right;
+    padding: 1px 0 0 112px;
+  }
 
-.card__price {
-  margin: 0;
-  padding-top: 40px;
-  position: absolute;
-  font-size: 11px;
-  line-height: 13px;
-}
+  .card__price {
+    margin: 0;
+    padding-top: 40px;
+    position: absolute;
+    font-size: 11px;
+    line-height: 13px;
+  }
 
-.card__number {
-  margin: 0;
-  padding-top: 34px;
-  padding-left: 91px;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 19px;
-}
+  .card__number {
+    margin: 0;
+    padding-top: 34px;
+    padding-left: 91px;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 19px;
+  }
 
-.card__button {
-  position: absolute;
-  width: 170px;
-  height: 40px;
-  margin-top: 20px;
-  border-radius: 5px;
-  color: $back-color;
-  background-color: #00acdc;
-  font-weight: bold;
-  text-align: center;
-  font-size: 14px;
-  border: 1px solid #00acdc;
-  box-sizing: border-box;
-  text-transform: uppercase;
-  text-decoration: none;
-  cursor: pointer;
-}
+  .card__button {
+    position: absolute;
+    width: 170px;
+    height: 40px;
+    margin-top: 20px;
+    border-radius: 5px;
+    color: $back-color;
+    background-color: $second-color;
+    font-weight: bold;
+    text-align: center;
+    font-size: 14px;
+    border: 1px solid $second-color;
+    box-sizing: border-box;
+    text-transform: uppercase;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
-.card__button:hover {
-  background-color: $back-color;
-  color: #00acdc;
+  .card__button:hover {
+    background-color: $back-color;
+    color: $second-color;
+  }
+
 }
