--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,3 +1,5 @@
+@import "_variables";
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -50,7 +52,7 @@
   width: 100%;
   height: 4px;
   border-radius: 8px;
-  background-color: #00addc;
+  background-color: $second-color;
 }
 
 .link__list-name {
@@ -59,14 +61,24 @@
   font-size: 12px;
   line-height: 60px;
   text-transform: uppercase;
+  color: #000;
 }
 
 .link__list-name:hover,
 .is-active {
-  color: #00addc;
+  color: $second-color;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 916px) {
+
+  .nav {
+    height: 50%;
+    margin: auto;
+  }
+
+  .nav__list {
+    display: block;
+  }
 
   .link__list-name {
     line-height: 20px;
