--- a/src/styles/_section.scss
+++ b/src/styles/_section.scss
@@ -1,3 +1,5 @@
+@import "_variables";
+
 .card-list {
   max-width: 992px;
   margin: 50px auto;
@@ -7,4 +9,11 @@
   flex-wrap: wrap;
   box-sizing: border-box;
   justify-content: center;
+}
+
+@media screen and (max-width: 916px) {
+
+  .card-list {
+    margin-top: 200px;
+  }
 }
